[package]
name = "json-lua"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
json-escape = "0.3.1"
ljr = { git = "https://github.com/carabalonepaulo/ljr", branch = "main", default-features = false }
thiserror = "2.0.17"

[features]
default = ["dynamic"]
dynamic = ["ljr/dynamic"]
static = ["ljr/static"]
